@@ -8,10 +8,10 @@
 .\"
 .\" Distributed under the terms of the Lucent Public License Version 1.02.
 .\"
-.\" Sccsid @(#)picpack.1b	1.2 (gritter) 9/21/05
-.TH PICPACK 1B "9/21/05" "Heirloom Documentation Tools" "BSD System Compatibility"
+.\" Sccsid @(#)picpack.1	1.3 (gritter) 2/2/07
+.TH PICPACK 1 "2/2/07" "Heirloom Documentation Tools" "User Commands"
 .SH NAME
-picpack \- (BSD) PostScript picture packing preprocessor
+picpack \- PostScript picture packing preprocessor
 .SH SYNOPSIS
 \fB/usr/ucb/picpack\fR [\fB\-k\fI\ list\fR] [\fB\-q\fR] [\fIfile\fR] ...
 .SH DESCRIPTION
