@@ -8,8 +8,8 @@
 .\"
 .\" Distributed under the terms of the Lucent Public License Version 1.02.
 .\"
-.\" Sccsid @(#)mcolor.7b	1.4 (gritter )12/5/05
-.TH MCOLOR 7B "12/5/05" "Heirloom Documentation Tools" "BSD System Compatibility"
+.\" Sccsid @(#)mcolor.7	1.5 (gritter )2/2/07
+.TH MCOLOR 7 "2/2/07" "Heirloom Documentation Tools" "Macro Packages"
 .ds dP /usr/ucblib/doctools/font/devpost/postscript
 .ds dT /usr/ucblib/doctools/tmac
 .SH NAME
