@@ -8,10 +8,10 @@
 .\"
 .\" Distributed under the terms of the Lucent Public License Version 1.02.
 .\"
-.\" Sccsid @(#)mpictures.7b	1.5 (gritter) 12/2/05
-.TH MPICTURES 7B "12/2/05" "Heirloom Documentation Tools" "BSD System Compatibility"
+.\" Sccsid @(#)mpictures.7	1.6 (gritter) 2/2/07
+.TH MPICTURES 7 "2/2/07" "Heirloom Documentation Tools" "Macro Packages"
 .SH NAME
-mpictures \- (BSD) picture inclusion macros
+mpictures \- picture inclusion macros
 .SH SYNOPSIS
 .B troff \-mpictures
 [
